--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,9 @@
-title: Your awesome title
-author:
-  name: GitHub User
-  email: your-email@domain.com
+title: Jonathan R. A. Müller
+author: Jonathan R. A. Müller
+  name: Jonathan R. A. Müller
+  email: jonathan.r.mueller@domain.com
 description: > # this means to ignore newlines until "show_excerpts:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Quantum information, semiconductor physics, spectroscopy and more.
 
 show_excerpts: false # set to true to show excerpts on the homepage
 
