--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Jonathan R. A. Müller
-author: Jonathan R. A. Müller
-  name: Jonathan R. A. Müller
+title: Jonathan R. A. M&uumlller
+author: Jonathan R. A. M&uumlller
+  name: Jonathan R. A. M&uumlller
   email: jonathan.r.mueller@domain.com
 description: > # this means to ignore newlines until "show_excerpts:"
   Quantum information, semiconductor physics, spectroscopy and more.
@@ -14,7 +14,7 @@ minima:
 
   # generate social links in footer
   social_links:
-    twitter: jekyllrb
+    # twitter: jekyllrb
     github:  jekyll
     # devto: jekyll
     # dribbble: jekyll
