--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Jonathan R. A. Mülller
 author: 
   name: Jonathan R. A. Mülller
-  email: jonathan.r.mueller@domain.com
+  email: "jonathan.r.mueller@gmail.com"
 description: > # this means to ignore newlines until "show_excerpts:"
   quantum information, optics, semiconductor physics, and more.
 
