--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Jonathan R. A. Mülller
+title: Jonathan R. A. Müller
 author: 
   name: Jonathan R. A. Mülller
   email: "jonathan.r.mueller@gmail.com"
