--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Jonathan R. A. Müller
 author: 
-  name: Jonathan R. A. Mülller
+  name: Jonathan R. A. Müller
   email: "jonathan.r.mueller@gmail.com"
 description: > # this means to ignore newlines until "show_excerpts:"
   Quantum information, optics, semiconductors, and more.
