--- a/_config.yml
+++ b/_config.yml
@@ -15,13 +15,13 @@ minima:
   # generate social links in footer
   social_links:
     # twitter: jekyllrb
-    github:  jekyll
+    github:  joniram
     # devto: jekyll
     # dribbble: jekyll
     # facebook: jekyll
     # flickr:   jekyll
     # instagram: jekyll
-    # linkedin: jekyll
+    linkedin: jonathan-müller
     # pinterest: jekyll
     # youtube: jekyll
     # youtube_channel: UC8CXR0-3I70i1tfPg1PAE1g
