--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Jonathan R. A. Müller
 author: 
   name: Jonathan R. A. Müller
-  email: "jonathan.r.mueller@gmail.com"
+  email: "jonathan.r.a.mueller@gmail.com"
 description: > # this means to ignore newlines until "show_excerpts:"
   Quantum information, optics, semiconductors, and more.
 
