--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,8 @@ description: > # this means to ignore newlines until "show_excerpts:"
 
 show_excerpts: true # set to true to show excerpts on the homepage
 
+google_analytics: UA-171652450-1
+
 # Minima date format
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
 minima:
