--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ minima:
     # facebook: jekyll
     # flickr:   jekyll
     # instagram: jekyll
-    linkedin: jonathan-müller
+    linkedin: jonathan-muller
     # pinterest: jekyll
     # youtube: jekyll
     # youtube_channel: UC8CXR0-3I70i1tfPg1PAE1g
