Favicon and new emial

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 title: Jonathan R. A. Müller
 author:
   name: Jonathan R. A. Müller
-  email: "jonathan.r.a.mueller@gmail.com"
+  email: "email@jramueller.com"
+  # email: "jonathan.r.a.mueller@gmail.com"
 description: > # this means to ignore newlines until "show_excerpts:"
   Semiconductors, optics, quantum information, and more.
 
