--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: > # this means to ignore newlines until "show_excerpts:"
 
 show_excerpts: true # set to true to show excerpts on the homepage
 
-# google_analytics: G-V8Y2LXLKYD
+google_analytics: G-V8Y2LXLKYD
 
 # Minima date format
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
